fix TaskTest to make the tests work